--- a/BootMeUp.Tests/BootMeUp.Tests.csproj
+++ b/BootMeUp.Tests/BootMeUp.Tests.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{5AB3CAA0-E1D7-4D7B-A4F7-B7911693327B}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>CSharpTests</RootNamespace>
-    <AssemblyName>BootMeUp.CSharp.Tests</AssemblyName>
+    <RootNamespace>Tests</RootNamespace>
+    <AssemblyName>BootMeUp.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
