--- a/BootMeUp/BootMeUp.csproj
+++ b/BootMeUp/BootMeUp.csproj
@@ -69,7 +69,7 @@
       <WrapperTool>tlbimp</WrapperTool>
       <Isolated>False</Isolated>
       <EmbedInteropTypes>True</EmbedInteropTypes>
-      <Private>True</Private>
+      <Private>False</Private>
     </COMReference>
   </ItemGroup>
   <ItemGroup>
