--- a/BootMeUp/BootMeUp.csproj
+++ b/BootMeUp/BootMeUp.csproj
@@ -10,6 +10,8 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>WK.Libraries.BootMeUpNS</RootNamespace>
     <AssemblyName>BootMeUp</AssemblyName>
+	<PackageID>BootMeUp</PackageID>
+    <RepositoryUrl>https://github.com/Willy-Kimura/BootMeUp.git</RepositoryUrl>
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
